--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "engines": {
-    "node": ">=5"
+    "node": ">=4"
   },
   "eslintConfig": {
     "extends": [
@@ -20,6 +20,7 @@
     ]
   },
   "devDependencies": {
+    "electron-contextmenu-middleware": "^1.0.0",
     "electron-prebuilt": "^0.36.10",
     "eslint": "^1.10.3",
     "eslint-config-features": "^1.1.5",
