--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "test": "xo",
     "start": "electron test.js"
   },
-  "keywords": ["electron", "input", "contextmenu", "shortcuts"],
+  "keywords": [
+    "electron",
+    "input",
+    "contextmenu",
+    "shortcuts"
+  ],
   "eslintConfig": {
     "extends": [
       "js",
@@ -18,7 +23,7 @@
   },
   "devDependencies": {
     "electron-contextmenu-middleware": "^1.0.0",
-    "electron-prebuilt": "^0.36.10",
+    "electron-prebuilt": "^1.1.1",
     "xo": "^0.15.1"
   },
   "files": [
@@ -29,5 +34,5 @@
       "browser",
       "node"
     ]
-  },
+  }
 }
